--- a/index.html
+++ b/index.html
@@ -150,6 +150,11 @@
                 <img src="img/MBQ_HackDef.jpg">
                 <a href="docs/MBQ_HackDef.pdf" target="_blank">MetaBaseQ</a>
             </div>
+            <div class="card">
+                <img src="img/WIP.jpg">
+                <a href="docs/WIP.pdf" target="_blank"> Winter Incubation Program</a>
+            </div>
+
         </div>
 
     </section>
