--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                     <li><a href="#about_me" onclick="seleccionar()">ABOUT ME</a></li>
                     <li><a href="#training" onclick="seleccionar()">TRAINING</a></li>
                     <li><a href="#skills" onclick="seleccionar()">SKILLS</a></li>
-                    <li><a href="#portfolio" onclick="seleccionar()">PORTFOLIO</a></li>
+                    <li><a href="#experiencia" onclick="seleccionar()">WORK EXPERIENCE</a></li>
                     <li><a href="#contact" onclick="seleccionar()">CONTACT</a></li>
                 </ul>
             </nav>
@@ -57,7 +57,7 @@
                     <div class="personal_information">
                         <br><br><h2>ABOUT ME</h2>
                         <p>
-                            <br><br>Hi! My name is <strong>Adriana Patricia Morales Sánchez</strong>, I'm 25 years old and I'm a <strong>Computer Systems Engineer</strong>, focused mainly on the <strong>Networking</strong> area.
+                            <br><br>Hi! My name is <strong>Adriana Patricia Morales Sánchez</strong>, I'm 26 years old and I'm a <strong>Computer Systems Engineer</strong>, focused mainly on the <strong>Networking</strong> area.
                             <br><br>I have also participated in desktop, mobile and web application development projects, with a penchant for the <strong>C#</strong> programming language.
                             <br><br>However, I can adapt to different programming languages to develop a variety of applications.
                             <br><br>I have worked with <strong>Agile, Kanban and SCRUM</strong> methodologies, focusing on results.
@@ -154,7 +154,10 @@
                 <img src="img/WIP.jpg">
                 <a href="docs/WIP.pdf" target="_blank"> Winter Incubation Program</a>
             </div>
-
+            <div class="card">
+                <img src="img/TVO.jpg">
+                <a href="docs/TVO.pdf" target="_blank"> Trend Vision One Plataform Advanced</a>
+            </div>
         </div>
 
     </section>
@@ -167,31 +170,12 @@
                 <div class="col">
                     <h3>Software</h3>
                         <ul>
-                            <li>
-                                <strong>Office Parcel</strong>
-                                (Word, PowerApps, PowerBI, PowerPoint, Excel)
-                            </li>        
-                            <li>
-                                <strong>Intell</strong>
-                                IJ
-                            </li>        
-                            <li>
-                                <strong>Visual Studio</strong>
-                            </li>        
-                            <li>
-                                <strong>Visual Studio Code</strong>
-                            </li>        
-                            <li>
-                                <strong>SQL</strong>
-                                Server
-                            </li>
-                            <li>
-                                <strong>Kali </strong>
-                                Linux
-                            </li>        
-                            <li>
-                                <strong>CISCO Packet Tracer</strong>
-                            </li>        
+                            <li><strong>Office Parcel</strong>(Word, PowerApps, PowerBI, PowerPoint, Excel)</li>        
+                            <li><strong>Intell</strong>IJ</li>        
+                            <li><strong>Visual Studio</strong></li>        
+                            <li><strong>Visual Studio Code</strong></li>        
+                            <li><strong>SQL</strong>Server</li>
+                            <li><strong>CISCO Packet Tracer</strong></li>        
                         </ul>
                     <br><h3>Networking Skills</h3>
                         <ul>
@@ -204,6 +188,12 @@
                             <li><strong>Subnet, VLSM</strong></li>
                             <li>Encryption and basic <strong>security</strong></li>
                             <li><strong>STP</strong></li>
+                        </ul>
+                        <br><h3>Security Skills</h3>
+                        <ul>
+                            <li><strong>Kali </strong>Linux</li>        
+                            <li><strong>Check Point</strong> firewalls</li>    
+                            <li>Wire<strong>shark</strong></li>
                         </ul>
                 </div>
 
@@ -232,16 +222,8 @@
                             </div>
                         </div>
 
-                    <h3><br>Others</h3>
+                    <h3><br>Web development</h3>
                         <div class="contenedor-leng">
-                            <div class="lenguajes">
-                                <i class="fa-solid fa-network-wired"></i>
-                                <span>Networks</span>
-                            </div>
-                            <div class="lenguajes">
-                                <i class="fa-brands fa-linux"></i>
-                                <span>Linux</span>
-                            </div>
                             <div class="lenguajes">
                                 <i class="fa-brands fa-html5"></i>
                                 <span>HTML5</span>
@@ -250,39 +232,29 @@
                                 <i class="fa-brands fa-css3-alt"></i>
                                 <span>CSS</span>
                             </div>
+                            <div class="lenguajes">
+                                <i class="fa-brands fa-bootstrap"></i>
+                                <span>Bootstrap</span>
+                            </div>
+                        </div>
+                    <h3><br>Security</h3>
+                        <div class="contenedor-leng">
+                            <div class="lenguajes">
+                                <i class="fa-solid fa-network-wired"></i>
+                                <span>Networks</span>
+                            </div>
+                            <div class="lenguajes">
+                                <i class="fa-solid fa-shield-halved"></i>
+                                <span>Firewalls</span>
+                            </div>
+                            <div class="lenguajes">
+                                <i class="fa-brands fa-linux"></i>
+                                <span>Linux</span>
+                            </div>
                         </div>
                 </div>
             </div>
 
-        </div>
-    </section>
-
-    <!--  PORTFOLIO  -->
-    <section id="portfolio" class="portfolio">
-        <h2><br>PORTFOLIO</h2>
-        <div class="contenedor-portfolio">
-            <div class="card">
-                <img src="img/ipv4_subredes_1.png">
-                <a href="img/ipv4_subredes_1.png" target="_blank">IPv4 routing with subnets</a>
-            </div>
-            <div class="card">
-                <img src="img/vlan_1.png">
-                <a href="img/vlan_1.png" target="_blank">VLAN with IPv4</a>
-            </div>
-            <div class="card">
-                <img src="img/VLAN_RIP_1.png">
-                <a href="img/VLAN_RIP_1.png" target="_blank">RIP routing with VLAN</a>
-            </div>
-            <div class="card">
-                <img src="img/VLSM_OSPF_1.png">
-                <a href="img/VLSM_OSPF_1.png" target="_blank">OSPF routing with VLSM</a>
-                </a>
-            </div>
-            <div class="card">
-                <img src="img/ipv6_1.png">
-                <a href="img/ipv6_1.png" target="_blank">RIP routing with IPv6</a>
-                </a>
-            </div>
         </div>
     </section>
     
