--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                            <img src="img/perfil.jpg" alt=""> 
                         </div>
                         <h1>Adriana Morales</h1>
-                        <h2>Computer Systems Engineering | Freelancer</h2>
+                        <h2>Computer Systems Engineering | Jr Security Consultant</h2>
                         <div class="redes">
                             <!--  Redes sociales  -->
                             <a href="https://www.linkedin.com/in/adripms/" target="_blank"><i class="fa-brands fa-linkedin-in"></i></a>
