--- a/index.html
+++ b/index.html
@@ -82,8 +82,8 @@
                     TELEMATIC ENGINEERING (unfinished)    
                 </li>
                 <li>
-                    <strong>(2020 - Present) UVM - San Rafael: </strong>
-                    COMPUTER SYSTEMS ENGINEERING    
+                    <strong>(2020 - 2024) UVM - San Rafael: </strong>
+                    COMPUTER SYSTEMS ENGINEERING  (pending conferral)   
                 </li>
                 <li>
                     <strong>(2021 Aug - Dec) UPC: </strong>
